buildscript {
	ext {
		springBootVersion = '1.5.2.RELEASE'
		springCloudVersion = '1.3.0.RELEASE'
	}
	repositories {
		maven {
			url "http://192.168.1.123:8081/repository/maven-public/"
		}
	}
	dependencies {
		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
	}
}

apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'org.springframework.boot'
apply plugin: 'war'
apply plugin: 'idea'

version = '1.0.0'
sourceCompatibility = 1.8

repositories {
	maven {
		url "http://192.168.1.123:8081/repository/maven-public/"
	}
}

/*
bootRun {
	systemProperties['CONFIG_PASSWORD'] = '123456'
	systemProperties['CONFIG_SERVER_ADDRESS'] = '192.168.1.124'
	systemProperties['CONFIG_SERVER_PORT'] = '1020'
	systemProperties['CONFIG_PROFILE'] = 'zl'
//	systemProperties['DEFAULT_JVM_OPTS'] = '-Dfile.encoding=UTF-8'
}
*/

dependencyManagement {
	imports {
		mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Camden.SR6'
	}
}

dependencies {
	compile('org.springframework.boot:spring-boot-starter')
	testCompile('org.springframework.boot:spring-boot-starter-test')
	compile("org.springframework.boot:spring-boot-starter-web") {
		exclude module: "spring-boot-starter-tomcat"
	}
    compile("org.springframework.boot:spring-boot-starter-jetty")
	compile('org.springframework.boot:spring-boot-starter-actuator')
	compile('io.springfox:springfox-swagger2:2.6.1')
	compile('io.springfox:springfox-swagger-ui:2.6.1')
	compile('org.springframework.cloud:spring-cloud-starter-feign')
	compile('org.springframework.cloud:spring-cloud-starter-eureka')
	compile('com.alibaba:fastjson:1.2.31')
	compile('org.sction:phprpc:3.0.2')
	compile('org.apache.commons:commons-lang3:3.5')
	compile('org.springframework.boot:spring-boot-devtools')
	compile "org.springframework.cloud:spring-cloud-starter-security:1.2.0.RELEASE"
	compile "org.springframework.cloud:spring-cloud-starter-oauth2:1.2.0.RELEASE"
	compile "org.springframework.cloud:spring-cloud-config-client:${springCloudVersion}"
	compile('mysql:mysql-connector-java:5.1.21')
	compile("tk.mybatis:mapper-spring-boot-starter:1.1.3:")
	compile("com.github.pagehelper:pagehelper:4.1.1")
	compile('org.springframework.boot:spring-boot-starter-jdbc')
    compile("org.springframework.boot:spring-boot-starter-redis:1.4.7.RELEASE")
	compile('org.apache.ant:ant-commons-net:1.8.4')
	compile group: 'commons-io', name: 'commons-io', version: '2.4'
	compile (group: 'commons-fileupload', name: 'commons-fileupload', version:'1.3.1')
	compile group: 'com.aliyun.openservices', name: 'ons-client', version: '1.6.0.Final'
	compile group: 'com.mashape.unirest', name: 'unirest-java', version: '1.4.9'
	compile group: 'net.sourceforge.javacsv', name: 'javacsv', version: '2.0'
	compile group: 'org.apache.poi', name: 'poi-ooxml', version: '3.16'
	compile group: 'org.quartz-scheduler', name: 'quartz', version: '2.3.0'
	compile group: 'net.coobird', name: 'thumbnailator', version: '0.4.8'

}
